crates/ir/tests/ir/snapshots/main__ir__lower__traits__derive_show_option.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__derive_show_option

type Option[x10] = Some#0(x10) | None#1
instance core/show.Show[Option] { show=Show$$Option$$show }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Option[Int] = construct Option::Some#0(42)
  let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Dict[core/show.Show, Option[Int]] = make_dict core/show.Show[Option[Int]](v2)
  let v4: String = trait_call core/show.Show.show(v3, v1)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v0, v4)
  v5

fn Show$$Option$$show(v6: Dict[core/show.Show, x10], v7: Option[x10]) -> String =
  switch v7 {
    0 (v8: x10) ->
      let v9: String = trait_call core/show.Show.show(v6, v8)
      let v10: String = concat_string("Some(", v9)
      let v11: String = concat_string(v10, ")")
      v11
    1 ->
      "None"
  }
