crates/ir/tests/ir/snapshots/main__ir__lower__traits__derive_show_record.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__derive_show_record

struct Point { x: Int, y: Int }
instance core/show.Show[Point] { show=Show$$Point$$show }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Point = construct Point(1, 2)
  let v2: Dict[core/show.Show, Point] = get_dict core/show.Show[Point]
  let v3: String = trait_call core/show.Show.show(v2, v1)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4

fn Show$$Point$$show(v5: Point) -> String =
  let v6: Int = project v5.0
  let v7: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v8: String = trait_call core/show.Show.show(v7, v6)
  let v9: String = concat_string("Point(", v8)
  let v10: String = concat_string(v9, ", ")
  let v11: Int = project v5.1
  let v12: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v13: String = trait_call core/show.Show.show(v12, v11)
  let v14: String = concat_string(v10, v13)
  let v15: String = concat_string(v14, ")")
  v15
