crates/ir/tests/ir/snapshots/main__ir__lower__traits__derive_show_recursive.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__derive_show_recursive

type List[x10] = Cons#0(x10, List[x10]) | Nil#1
instance core/show.Show[List] { show=Show$$List$$show }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Dict[core/show.Show, List[Int]] = make_dict core/show.Show[List[Int]](v5)
  let v7: String = trait_call core/show.Show.show(v6, v4)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v0, v7)
  v8

fn Show$$List$$show(v9: Dict[core/show.Show, x10], v10: List[x10]) -> String =
  switch v10 {
    0 (v11: x10, v12: List[x10]) ->
      let v13: String = trait_call core/show.Show.show(v9, v11)
      let v14: String = concat_string("Cons(", v13)
      let v15: String = concat_string(v14, ", ")
      let v16: Dict[core/show.Show, List[x10]] = make_dict core/show.Show[List[x10]](v9)
      let v17: String = trait_call core/show.Show.show(v16, v12)
      let v18: String = concat_string(v15, v17)
      let v19: String = concat_string(v18, ")")
      v19
    1 ->
      "Nil"
  }
