crates/ir/tests/ir/snapshots/main__ir__lower__traits__extern_trait_impl_mode_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__extern_trait_impl_mode_ok

trait Runnable[y10] { run(y10): Unit }
instance traits__extern_trait_impl_mode_ok.Runnable[$Fun0$Unit] { run=Runnable$$$Fun0$Unit$$run }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn main() -> Unit =
  ()

fn Runnable$$$Fun0$Unit$$run(v0: () -> Unit) -> Unit =
  let v1: Unit = call_closure v0()
  v1
