crates/ir/tests/ir/snapshots/main__ir__lower__traits__hkt_functor.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__hkt_functor

type Box[x10] = Box#0(x10)
trait Functor[o11] { fmap(o11[p11], (p11) -> q11): o11[q11] }
instance traits__hkt_functor.Functor[Box] { fmap=Functor$$Box$$fmap }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn Functor$$Box$$fmap(v0: Box[x11], v1: (x11) -> z11) -> Box[z11] =
  switch v0 {
    0 (v2: x11) ->
      let v3: z11 = call_closure v1(v2)
      let v4: Box[z11] = construct Box::Box#0(v3)
      v4
  }
