crates/ir/tests/ir/snapshots/main__ir__lower__traits__impl_method_borrow_matches.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__impl_method_borrow_matches

struct File { fd: Int }
struct Bytes { data: Int }
trait Reader[n11] { read(~n11): Bytes }
instance traits__impl_method_borrow_matches.Reader[File] { read=Reader$$File$$read }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn main() -> Unit =
  ()

fn Reader$$File$$read(v0: ~File) -> Bytes =
  let v1: Bytes = construct Bytes(0)
  v1
