crates/ir/tests/ir/snapshots/main__ir__lower__traits__impl_method_observational_matches.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__impl_method_observational_matches

struct File { fd: Int }
trait MyShow[b11] { show(b11): String }
instance traits__impl_method_observational_matches.MyShow[File] { show=MyShow$$File$$show }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn main() -> Unit =
  ()

fn MyShow$$File$$show(v0: File) -> String =
  "file"
